add new update of manging menue page rendering

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,3 +33,7 @@ html {
 body {
   height: 100%;
 }
+fieldset.mui-jnltum-MuiOutlinedInput-notchedOutline{
+  border: 1px solid skyblue;
+  border-radius:9999px;
+}
