--- a/src/styles/theme/scroll_bar_style/scroll_bar.css
+++ b/src/styles/theme/scroll_bar_style/scroll_bar.css
@@ -1,15 +1,15 @@
 .overview_table::-webkit-scrollbar-track{
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
+	/* border-radius: 10px; */
 	background-color: #F5F5F5;
 }
 .overview_table::-webkit-scrollbar{
-	width: 12px;
+	width: 5px;
 	background-color: #F5F5F5;
-    height: 10px;
+    height: 7px;
 }
 .overview_table::-webkit-scrollbar-thumb{
-	border-radius: 10px;
+	/* border-radius: 4px; */
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #3633f3;
 }
