--- a/src/styles/theme/scroll_bar_style/scroll_bar_sm.css
+++ b/src/styles/theme/scroll_bar_style/scroll_bar_sm.css
@@ -13,3 +13,13 @@
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: rgb(248 113 113);
 }
+
+.MuiDataGrid-scrollbar.MuiDataGrid-scrollbar--horizontal.mui-1rtad1::-webkit-scrollbar-thumb{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(56 189 248);
+}
+.MuiDataGrid-scrollbar.MuiDataGrid-scrollbar--horizontal.mui-1rtad1::-webkit-scrollbar{
+	width: 5px;
+	background-color: #eb9595;
+    height: 7px;
+}
